--- a/style/style.css
+++ b/style/style.css
@@ -4,11 +4,13 @@ body {
     padding: 0;
     margin: 0;
     font-family: "Open Sans",sans-serif;
+    box-sizing: border-box;
 }
 
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 a {
@@ -43,17 +45,17 @@ a {
 }
 .sea_btn{
     min-width: 150px;
-    height: 43px;
+    height: 40px;
     font-weight: 600;
-    color: #E6E6E6;
-    border: 2px solid;
+    color: #ffffff;
+    border: 1px solid;
     background-color: #00A4E5;
     font-size: 13px;
     line-height: 15px;
     letter-spacing: 0.5px;
 }
 .sea_btn:hover{
-    background-color: #E6E6E6;
+    background-color: #ffffff;
     color: #00A4E5;
 }
 
@@ -73,7 +75,7 @@ a {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     letter-spacing: 5.70937px;
-    font-size: 68px;
+    font-size: 60px;
     line-height: 70px;
     color: #fff;
 }
@@ -172,7 +174,7 @@ a {
     padding: 18px;
     width: 100%;
     background: url("../image/Bitmap.png") no-repeat;
-    margin-right: 10px;
+    margin-left: 10px;
     font-size: 24px;
     line-height: 29px;
     letter-spacing: 0.1875px;
@@ -183,7 +185,7 @@ a {
     width: 100%;
     background: url("../image/Bitmap-2.png") no-repeat;
     padding: 18px;
-    margin-right: 10px;
+    margin-left: 10px;
     font-size: 24px;
     line-height: 29px;
     letter-spacing: 0.1875px;
@@ -194,7 +196,7 @@ a {
     width: 100%;
     background: url("../image/Bitmap-3.png") no-repeat;
     padding: 18px;
-    margin-right: 10px;
+    margin-left: 10px;
     font-size: 24px;
     line-height: 29px;
     letter-spacing: 0.1875px;
@@ -204,7 +206,10 @@ a {
 /*About section*/
 /*Services section*/
 .services{
-    margin-bottom: 78px;
+    margin-bottom: 235px;
+}
+.services_cards{
+    padding-top: 78px;
 }
 .services_title:before{
     content: "";
@@ -228,23 +233,37 @@ a {
     margin-bottom: 10px;
 }
 
-.card-desc{
+.card_info{
     width: 295px;
     height: 330px;
     border: 1px solid #E6E6E6;
     padding: 39px 23px;
     margin-right: 27px;
+    transition: 0.5s;
 }
-.card_info-1{
+.card_info:hover{
+
+    border: 1px solid #00A4E5;
+}
+.card_title{
+    width: 253px;
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.426667px;
     color: #48555B;
-    margin: 23px 0px 13px 0px;
-
+    padding: 25px 0 13px;
+}
+.card_desc{
+    width: 250px;
+    height: 92px;
+    font-size: 13px;
+    line-height: 23px;
+    letter-spacing: 0.1875px;
+    color: #48555B;
 }
 /*Services section*/
+
 /*Get in touch section*/
 .get-in-touch{
     display: flex;
@@ -284,19 +303,17 @@ a {
     margin-right: 70px;
 }
 .news_email{
-    min-width: 214px;
-    height: 6px;
+    min-width: 250px;
+    height: 40px;
     color: #48555B;
-    padding: 16px;
+    padding-left: 16px;
 }
 
 .news_signup{
-    border: 2px solid #171819 ;
-    margin-left: -10px;
+    border: 1px solid #171819; ;
+    margin-left: -1px;
 }
-.news_signup:hover{
-    border: 2px solid #00A4E5;
-}
+
 /*newsletter section*/
 /* footer */
 .footer_top{
@@ -334,7 +351,7 @@ a {
 .footer_link{
     display: inline-block;
     margin-bottom: 3px;
-    font_size: 12px;
+    font-size: 12px;
     font-weight: 500;
     line-height: 25px;
     letter-spacing: 0.846154px;
